arma-rs/tests/derive/fail_enum.stderr
error: expected `struct`
 --> tests/derive/fail_enum.rs:4:5
  |
4 | pub enum DeriveTest {
  |     ^^^^
