arma-rs/tests/derive/fail_enum.rs
use arma_rs_proc::Arma;

#[derive(Arma)]
pub enum DeriveTest {
    A,
    B,
}

pub fn main() {}
